# trapse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  capstone_arm.c  cmake_install.cmake  compile_commands.json  hello_world.c  os.c  support.c  trapse.c  zydis.c
include/trapse/: capstone_arm.h  global.h  os.h  support.h  zydis.h
